# quic_geyser_plugin

./: Cargo.toml  README.md  config.json
block-builder/: Cargo.toml
block-builder/src/: block_builder.rs  tests.rs
blocking_client/: Cargo.toml
blocking_client/src/: client.rs  quiche_client_loop.rs
client/: Cargo.toml
client/src/non_blocking/: client.rs  dictionary_store.rs  mod.rs
common/: Cargo.toml
common/src/: channel_message.rs  compression.rs  config.rs  defaults.rs  dictionary.rs  filters.rs  lib.rs  message.rs  stream_manager.rs
common/src/types/: account.rs  block_meta.rs  transaction.rs
examples/tester-client/: Cargo.toml
examples/tester-client/src/: cli.rs  main.rs
examples/tester-server/: Cargo.toml
examples/tester-server/src/: cli.rs  main.rs
plugin/: Cargo.toml  build.rs
plugin/src/: quic_plugin.rs
proxy/: Cargo.toml
proxy/src/: main.rs
quiche/: Cargo.toml
server/: Cargo.toml
server/src/: configure_server.rs  dictionary_manager.rs  dictionary_trainer.rs  lib.rs  quic_server.rs  quinn_server_loop.rs
