[workspace]
resolver = "2"

members = [
    "plugin",
    "client",
    "common",
    "server",
    "examples/tester-client",
    "examples/tester-server",
    "proxy",
    "block-builder",
]

[workspace.package]
version = "0.1.6"
authors = ["gmgalactus <godmodegalactus@gmail.com>"]
repository = "https://github.com/jupnet/quic_geyser_plugin"
license = "AGPL"
edition = "2021"

[workspace.dependencies]
jupnet-sdk = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-streamer = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-quic-client = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-program = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-transaction-status = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-logger = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-rpc-client = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-rpc-client-api = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
jupnet-account-decoder = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }
agave-geyser-plugin-interface = { git = "https://github.com/jupnet/jupnet-svm.git", branch = "v2.1" }

itertools = "0.10.5"
serde = "1.0.201"
clap = "4.4.0"
serde_json = "1.0.96"
bincode = "=1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
thiserror = "1.0.40"
bytes = "1.4.0"
anyhow = "1.0.70"
log = "0.4.17"
const_env = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = "0.4.24"
lz4 = "1.24.0"
prometheus = "0.13.2"
lazy_static = "1.4.0"

cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = "8.2.1"
rand = "0.8.5"
tokio = "1.43.0"
circular-buffer = "0.1.9"

quinn = "0.11.9"
quinn-proto = "0.11.9"
rustls = "0.23.15"
rcgen = "0.13.2"
pkcs8 = "0.9.0"
pem = "1.1.1"

quic-geyser-common = {path = "common", version="0.1.5"}
quic-geyser-client = {path = "client", version="0.1.5"}
quic-geyser-plugin = {path = "plugin", version="0.1.5"}
quic-geyser-server = {path = "server", version="0.1.5"}
quic-geyser-block-builder = {path = "block-builder", version = "0.1.6"}

[profile.release]
debug = true
lto = true
codegen-units = 1
