[package]
name = "quic-geyser-block-builder"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jupnet-sdk = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

quic-geyser-common = { workspace = true }
bincode = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
quic-geyser-server = { workspace = true }