[package]
name = "quic-geyser-client"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jupnet-sdk = { workspace = true }
jupnet-streamer = { workspace = true }
jupnet-quic-client = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }

quic-geyser-common = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
quic-geyser-server = { workspace = true }