[package]
name = "quic-geyser-server"
version = "0.1.6"
edition = "2021"

[dependencies]
jupnet-sdk = { workspace = true }
jupnet-transaction-status = { workspace = true }
jupnet-streamer = { workspace = true }

serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = {workspace = true}
itertools = { workspace = true }
bincode = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
tokio = { workspace = true }
pem = { workspace = true }
rustls = { workspace = true }

quic-geyser-common = { workspace = true }

prometheus = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tracing-subscriber = { workspace = true }